Complete payment upload and order tracking functionality

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -131,6 +131,8 @@
                     <a href="#" style="margin: 0 15px; color: #333; text-decoration: none;">首頁</a>
                     <a href="#products" style="margin: 0 15px; color: #333; text-decoration: none;">商品</a>
                     <a href="#warehouse" style="margin: 0 15px; color: #333; text-decoration: none;">倉庫資訊</a>
+                    <a href="cart.html" style="margin: 0 15px; color: #333; text-decoration: none;">購物車</a>
+                    <a href="order-tracking.html" style="margin: 0 15px; color: #333; text-decoration: none;">訂單追蹤</a>
                     <a href="#contact" style="margin: 0 15px; color: #333; text-decoration: none;">聯絡我們</a>
                 </div>
             </div>
@@ -220,3 +222,4 @@
     </script>
 </body>
 </html>
+
