Initial commit - 代購平台專案

--- a/frontend/pages/checkout.html
+++ b/frontend/pages/checkout.html
@@ -122,6 +122,7 @@
             color: red;
         }
     </style>
+    <script src="../js/settings-sync.js"></script>
 </head>
 <body>
     <div class="checkout-container">
@@ -324,3 +325,4 @@
     </script>
 </body>
 </html>
+
