feat: 完整的代購平台功能
- 完整的前端頁面 (首頁、購物車、結帳、訂單追蹤)
- Node.js 後端服務
- SendGrid 郵件集成
- 管理後台系統
- 響應式蝦皮風格設計
- 集運倉庫集成 (跑跑虎)
- 付款證明上傳功能

--- a/frontend/pages/checkout.html
+++ b/frontend/pages/checkout.html
@@ -320,9 +320,12 @@
         });
         
         // 初始化
+                // 初始化
         updateWarehouseInfo();
+        calculateOrder();
         calculateOrder();
     </script>
 </body>
 </html>
+
 
